welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche()
while (!estfaceMur) {
	if (porteBiscuit) {
		if (estSurBiscuit) {
			recule()
			poseBiscuit()
		} else {
			avance()
		}
	} else {
		avance()
		if (estSurBiscuit) {
			prendBiscuit
		}
	}
}
	droite()
	avance()
	gauche()
	avance()
	gauche()

	

